// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <label
    class="t-radio"
  >
    <input
      class="t-radio__former"
      readonly=""
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      未选中
    </span>
  </label>
  <label
    class="t-radio t-is-checked"
  >
    <input
      checked=""
      class="t-radio__former"
      readonly=""
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      已选中
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      disabled=""
      readonly=""
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      禁用未选中
    </span>
  </label>
  <label
    class="t-radio t-is-checked t-is-disabled"
  >
    <input
      checked=""
      class="t-radio__former"
      disabled=""
      readonly=""
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      禁用已选中
    </span>
  </label>
</DocumentFragment>
`;

exports[`button.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-medium"
  >
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        checked=""
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="china"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        中国
      </span>
    </label>
    <label
      class="t-radio-button t-is-disabled"
    >
      <input
        class="t-radio-button__former"
        disabled=""
        readonly=""
        type="radio"
        value="usa"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        美国
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="england"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        英国
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="japan"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        日本
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="korea"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        韩国
      </span>
    </label>
  </div>
  <br />
  <div
    class="t-radio-group t-radio-group-solid t-radio-group-small"
  >
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        checked=""
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="bj"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button t-is-disabled"
    >
      <input
        class="t-radio-button__former"
        disabled=""
        readonly=""
        type="radio"
        value="sh"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="gz"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="sz"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="xm"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        厦门
      </span>
    </label>
    <div
      class="t-radio-group-solid-bg-block"
      style="width: 0px; left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-medium"
  >
    <label
      class="t-radio t-is-checked"
    >
      <input
        checked=""
        class="t-radio__former"
        readonly=""
        type="radio"
        value="male"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        男性
      </span>
    </label>
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        readonly=""
        type="radio"
        value="female"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        女性
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-small"
  >
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        checked=""
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="bj"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="sh"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="gz"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="sz"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
  </div>
  <br />
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-medium"
  >
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="bj1"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        checked=""
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="sh1"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="gz1"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="sz1"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
  </div>
  <br />
  <div
    class="t-radio-group t-radio-group-outline t-radio-group-large"
  >
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="bj2"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="sh2"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        checked=""
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="gz2"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        readonly=""
        type="radio"
        value="sz2"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        深圳
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`type.jsx 1`] = `
<DocumentFragment>
  <div>
    <h5>
      普通单选按钮
    </h5>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-large"
    >
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          readonly=""
          type="radio"
          value="bj"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          选项一
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          readonly=""
          type="radio"
          value="sh"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          选项二
        </span>
      </label>
      <label
        class="t-radio t-is-checked"
      >
        <input
          checked=""
          class="t-radio__former"
          readonly=""
          type="radio"
          value="gz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          选项三
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          readonly=""
          type="radio"
          value="sz"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          选项四
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin: 16px 0px;"
  >
    <h5>
      边框型单选按钮
    </h5>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-large"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项一
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="2"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项二
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项三
        </span>
      </label>
    </div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-large"
    >
      <label
        class="t-radio-button t-is-checked t-is-disabled"
      >
        <input
          checked=""
          class="t-radio-button__former"
          disabled=""
          readonly=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选中禁用态
        </span>
      </label>
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          readonly=""
          type="radio"
          value="2"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          未选中禁用态
        </span>
      </label>
    </div>
  </div>
  <div>
    <h5>
      填充型单选按钮
    </h5>
    <div
      class="t-radio-group t-radio-group-solid t-radio-group-large"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="bj"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项一
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项二
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="sz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选项三
        </span>
      </label>
      <div
        class="t-radio-group-solid-bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
    <div
      class="t-radio-group t-radio-group-solid t-radio-group-large"
    >
      <label
        class="t-radio-button t-is-checked t-is-disabled"
      >
        <input
          checked=""
          class="t-radio-button__former"
          disabled=""
          readonly=""
          type="radio"
          value="bj"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          选中禁用态
        </span>
      </label>
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          readonly=""
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          未选中禁用态
        </span>
      </label>
      <div
        class="t-radio-group-solid-bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;
